k8s/dev/database/service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: todo-app

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
