k8s/dev/database/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-network-policy
  namespace: database

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: backend

      ports:
        - protocol: TCP
          port: 5432
